# otus_homework_12_mapreduce

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/mapreduce/: CMakeLists.txt  mapreduce.cpp  mapreduce.h
test_data/: in.txt
tests/: test.txt
